[tool.poetry]
name = "tricluster"
version = "0.1.0"
description = ""
authors = ["m mangini <emalakazam@gmail.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
scipy = "^1.10.1"
tensorflow = "^2.12.0"
umap-learn = "^0.5.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
